# AI_frameworks_exercices

./: .gitignore  README.md
Lecture_10_RL/: README.md  main.py  pyproject.toml  requirements.txt
Lecture_10_RL/lib/: algorithms.py  global_const.py  markov_chain.py  markov_reward_process.py  models.py  utils.py
Lecture_10_RL/notebooks/: Frozen_lake.ipynb
Lecture_10_RL/results/run_20251205_225106/: DQN_settings.json  Markov_Chain_Monte_Carlo_settings.json  Policy_Iteration_settings.json  Q_learning_settings.json  Value_Iteration_env_description.txt
Lecture_10_RL/results/run_20251206_010642/: Value_Iteration_settings.json  env_description.json
Lecture_10_RL/results/run_20251206_012042/: Q_learning_settings.json
Lecture_10_RL/results/run_20251206_081634/: DQN_settings.json  Markov_Chain_Monte_Carlo_settings.json  env_description.json
Lecture_10_RL/results/run_20251206_094621/: Markov_Chain_Monte_Carlo_rewards_history.parquet  Markov_Chain_Monte_Carlo_settings.json  (+5 more)
Lecture_11_Tensorflow_Keras/: Dockerfile.tensorflow  README.md  docker-compose.tensorflow.yaml  main.py  pyproject.toml
Lecture_11_Tensorflow_Keras/lib/: pytorch_exercice.py  pytorch_models.py  tensorflow_exercice.py
Lecture_11_Tensorflow_Keras/notebooks/: pytorch_cnn.ipynb  tensorF_cnn.ipynb
Lecture_8_Tensorboard/: README.md  main.py  pyproject.toml  requirements.txt
Lecture_8_Tensorboard/lib/: exercices.py  global_constants.py  model.py  reporter.py  utils.py
Lecture_8_Tensorboard/notebooks/: RNN_NLP_PyTorch.ipynb  Tensorboard_PyTorch.ipynb  Transfer_learning_PyTorch.ipynb
(+193 files in other folders)
